# aws-lambda-sigv4-rust

./: Cargo.toml  README.md
aws-sigv4/: Cargo.toml
aws-sigv4/src/: lib.rs
