[package]
name = "aws-lambda-sigv4-rust"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
aws-sigv4 = { path = "aws-sigv4" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
hyper-tls = "0.5"